# imvr

./: Cargo.toml  README.md  SPEC.md  flake.nix  justfile
src/: background_thread.rs  buffer.rs  buffers.rs  cli.rs  color.rs  context.rs  error.rs  gpu.rs  image.rs  image_info.rs  main.rs  mouse.rs  oneshot.rs  prelude.rs  request.rs  util.rs  window.rs
src/backend/: context.rs  event.rs  gpu.rs  mod.rs  mouse.rs  mouse_cache.rs  proxy.rs  window.rs
src/backend/util/: gpu_image.rs  mod.rs
src/ctx/: interpreter.rs  mod.rs
src/event/: mod.rs
src/events/: args.rs  input.rs  mod.rs  rpc.rs  socket.rs  stdin.rs  system.rs  window.rs
src/logic/: id.rs  mod.rs
src/logic/event/: mod.rs
src/logic/event/device/: key.rs
src/logic/msg/: key.rs  mod.rs  terminal.rs  window.rs
src/logic/msg/event/: mod.rs  mouse.rs
src/logic/msg/source/: args.rs  mod.rs  socket.rs  stdin.rs
src/logic/req/: mod.rs  terminal.rs  window.rs
src/render/: ctx.rs  mod.rs  uniforms.rs
src/render/gpu/: buffer.rs  ctx.rs  image.rs  mod.rs
src/task/: logic.rs  mod.rs  render.rs
src/util/: event.rs  key.rs  mod.rs
src/window/: event.rs  mod.rs  uniforms.rs
