[package]
name = "imvr"
version = "0.1.1"
edition = "2021"

[dependencies]
futures = "0.3"
wgpu = { version = "0.17", features = ["spirv"] }
glam = { version = "0.24", features = ["serde"] }
image = "0.24"
winit = { version = "0.29.0-beta.0", features = ["serde", "wayland"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
log = "0.4"
env_logger = "0.10"
oneshot = "0.1"
