[package]
name = "imvr"
version = "0.1.1"
edition = "2021"

[dependencies]
futures = "0.3"
glam = { version = "0.24", features = ["serde"] }
image = "0.24"
winit = { version = "0.29", features = ["serde", "wayland", "rwh_05"] }
wgpu = { version = "0.17", features = ["spirv"] }
# raw-window-handle = "0.6"
res = { package = "color-eyre", version = "0.6" }
serde = { version = "1.0", features = ["derive"] }
json = { package = "serde_json", version = "1.0" }
crossterm = "0.27"
log = "0.4"
logger = { package = "env_logger", version = "0.10" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
fallible-iter-ext = { path = "../fallible/" }

[profile.dev.package.backtrace]
opt-level = 3
