[package]
name = "imvr"
version = "0.1.1"
edition = "2021"

[dependencies]
wgpu = { version = "0.19", features = ["spirv"] }
futures = "0.3"
image = "0.25"
winit = { version = "0.29", features = ["serde", "wayland", "rwh_05"] }
json = { package = "serde_json", version = "1.0" }
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# resu = {package = "error-stack", version = "0.4"}
ext = { git = "https://github.com/focus172/ext", features = ["serde"] }

# glam = { version = "0.24", features = ["serde"] }
# error-stack = "0.4"
# log = "0.4"
# logger = { package = "env_logger", version = "0.10" }
